--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,10 +5,10 @@
 @charset "utf-8";
 
 $sans-serif: "Fira Sans", sans-serif !default;
+$monospace: Consolas, "Lucida Console", monospace !default;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-
 
 .toc {
   .nav__title {
@@ -450,4 +450,20 @@ h2 {
   }
 }
 
+div.highlighter-rouge,
+figure.highlight {
+  position: relative;
+  margin-bottom: 1em;
+  background: $base00;
+  color: $base05;
+  font-family: $monospace;
+  font-size: $type-size-8;
+  line-height: 1.4;
+  border-radius: $border-radius;
 
+  > pre,
+  pre.highlight {
+    margin: 0;
+    padding: 1em;
+  }
+}
