--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -282,6 +282,12 @@ h2 {
    Features
    ========================================================================== */
 
+.feature__wrapper {
+  @include clearfix();
+  margin-bottom: 0;
+  border-bottom: 0px solid $border-color;
+}
+
 .feature__item {
   position: relative;
   margin-bottom: 2em;
