--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -19,12 +19,13 @@ window.cookieconsent.initialise({
 </script>    
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118976681-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PT2PCSM4PN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-118976681-1');
+  gtag('config', 'G-PT2PCSM4PN');
 </script>
 
