--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,8 +12,10 @@ $type-size-7: 0.6875em !default; // ~11px
 $type-size-8: 0.625em !default;  // ~10px
 @charset "utf-8";
 
-$sans-serif: "Fira Sans", sans-serif !default;
+$sans-serif: "Montserrat", sans-serif !default;
+$sans-serif-narrow: "Montserrat", sans-serif !default;
 $monospace: Consolas, "Lucida Console", monospace !default;
+$serif: "Merriweather", Times, serif !default;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
@@ -37,8 +39,6 @@ figcaption {
   font-style: italic;
 }
 
-
-
 /* ==========================================================================
    MASTHEAD
    ========================================================================== */
@@ -46,11 +46,11 @@ figcaption {
 .masthead {
   border-bottom: 0px solid $border-color;
   background-color: $masthead-background-color;
+ 
   &__inner-wrap {
-      padding: .1rem;
+      padding: .1rem;      
   }
 }
-
 
 .greedy-nav {
   background-color: $masthead-background-color;
@@ -58,10 +58,6 @@ figcaption {
     padding: 0.1rem 0;
   }
 }
-
-
-
-
 
 h1 {
   a {
