--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -520,3 +520,40 @@ td > code {
     content: "\00a0"; /* non-breaking space*/
   }
 }
+
+/* ==========================================================================
+   Before/after
+   ========================================================================== */
+* {box-sizing: border-box;}
+
+.img-comp-container {
+  position: relative;
+//  height: 400px; /*should be the same height as the images*/
+}
+
+.img-comp-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  overflow:hidden; 
+}
+
+.img-comp-img img {
+  display:block;
+  vertical-align:middle;
+//  height: 400px;
+  object-fit: cover;
+  object-position: bottom left;
+}
+
+.img-comp-slider {
+  position: absolute;
+  z-index:9;
+  cursor: ew-resize;
+  /*set the appearance of the slider:*/
+  width: 40px;
+  height: 40px;
+  background-color: #2196F3;
+  opacity: 0.7;
+  border-radius: 50%;
+}
